--- a/templates/test.html.twig
+++ b/templates/test.html.twig
@@ -7,9 +7,10 @@
 {#    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">#}
 
     <!-- Custom styles for this template-->
-    <link href = "bootstrap/dist/css/bootstrap.css" rel = "stylesheet" type = "text/css">
-    <link href = "styles/style.css" rel = "stylesheet" type = "text/css">
+    <link href = "../bootstrap/dist/css/bootstrap.css" rel = "stylesheet" type = "text/css">
+    <link href = "../styles/style.css" rel = "stylesheet" type = "text/css">
 </head>
+
 <body class = "d-flex">
 
 
