--- a/templates/test.html.twig
+++ b/templates/test.html.twig
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>Welcome to Symfony!</title>
+    <title>JobsHunter</title>
 
     <!-- Custom fonts for this template-->
 {#    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">#}
 
     <!-- Custom styles for this template-->
     <link href = "../bootstrap/dist/css/bootstrap.css" rel = "stylesheet" type = "text/css">
-    <link href = "../styless/style.css" rel = "stylesheet" type = "text/css">
+    <link href = "../styles/style.css" rel = "stylesheet" type = "text/css">
 </head>
 
 <body class = "d-flex">
@@ -25,12 +25,23 @@
     <div class = "custom-row flex-fill">
         <!-- TOPBAR -->
         <div class = "col-sm-12">
-            <div class = "topbar">
-                <div class="searchBar">
-                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+            <div class = "topbar row">
+                <div class = "col-sm-7">
+                    <div class="searchBar">
+                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                    </div>
+                    <div>
+                        <button class = "btn btn-primary searchBarButton">Search</button>
+                    </div>
                 </div>
-                <div>
-                    <button class = "btn btn-primary searchBarButton">Search</button>
+                <div class = col-sm-5>
+                    <div class="p-3">
+                    {% if app.user %}
+                            Logged as : {{ app.user.username }} <a href="{{ path('app_logout') }}">Logout</a>
+                    {% else %}
+                        <a href="{{ path('app_login') }}">Login</a>
+                    {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
@@ -46,7 +57,9 @@
                     </div>
 
                     <div class = "d-inline-block pt-2 pl-3">
-                        <span>{{ ad.getDescription() }}
+                        <span>
+{#                            {{ ad.getDescription() }}#}
+                            But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?
                             </span>
                     </div>
                     <div class = "d-inline-block float-right">
@@ -59,7 +72,9 @@
                 <div class="collapse" id="MyCollapseCard{{ ad.getId() }}">
                     <div class = row>
                         <div class = "col-sm-12 col-md-5">
-                            <div class = "pl-2 pt-2" style = "min-height : 7rem">{{ ad.getDescription() }}
+                            <div class = "pl-2 pt-2" style = "min-height : 7rem">
+                                But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?
+{#                                {{ ad.getDescription() }}#}
                             </div>
                         </div>
                         <div class = "col-sm-12 col-md-5">
@@ -71,7 +86,7 @@
                         </div>
                         <div class ="col-sm-12 col-md-2 d-flex align-items-center justify-content-center">
                             <div class = "align-middle d-inline-block">
-                                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <button class="btn btn-success" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Apply
                                 </button>
                                 <div class="dropdown-menu applyForm" aria-labelledby="dropdownMenuButton">
