--- a/templates/register_copy.html.twig
+++ b/templates/register_copy.html.twig
@@ -61,6 +61,11 @@
                                         </div>
                                     </div>
                                     {{ form_end(form) }}
+                                    <div class = "col-lg-12 text-right">
+                                        <div class = "pr-2">
+                                          <a href = {{ path('app_login') }}> Working for a company ? Register here</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
