--- a/templates/register-menu.html.twig
+++ b/templates/register-menu.html.twig
@@ -9,14 +9,14 @@
     <div class = "col-lg-7 col-md-12">
         <div class = "p-2">
             <div class = "text-center register-title">
-                User type :
+                You are a :
             </div>
         </div>
         <div class = row>
             <div class = "col-sm-12">
                 <a href = {{ path('registerPage') }}>
                 <div class = 'register-button p-2 mr-4 mb-3 text-center'>
-                    User
+                    Job Hunter
                 </div>
                 </a>
             </div>
