--- a/templates/company_cms/company-menu.html.twig
+++ b/templates/company_cms/company-menu.html.twig
@@ -8,38 +8,46 @@
 
     <!-- Custom styles for this template-->
     <link href = "../bootstrap/dist/css/bootstrap.css" rel = "stylesheet" type = "text/css">
-    <link href = "../styles/style.css" rel = "stylesheet" type = "text/css">
+    <link href = "../styles/styles.css" rel = "stylesheet" type = "text/css">
 </head>
 
 <body class = "d-flex">
 
+<!-- NAVBAR-->
+                <nav class="navbar fixed-top navbar-dark bg-primary">
+                    <a class="navbar-brand" href="#">JobsHunter</a>
+                        <ul class="list-group-horizontal navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Our current ads<span class="sr-only">(current)</span></a>
+                            </li>
+                            {% if app.user %}
+                            <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="userMenu" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Account information
+                                    </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="userMenu">See your profile</a>
+                                    <a class="dropdown-item" href="/updateUser/{id}">Update your profile</a>
+                                    <a class="dropdown-item" href="userMenu">See your applications</a>
+                                </div>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About us</a>
+                            </li>
+                            {% endif %}
+                            
+                        </ul>
 
-<!-- SIDEBAR -->
-
-<!--END SIDEBAR -->
-
-<!-- CONTENT -->
-    <div class = "custom-row flex-fill">
-        <!-- TOPBAR -->
-        <div class = "col-sm-12">
-            <div class = "topbar row">
-                <div class = "col-sm-7">
-                    <a class="btn btn-success nav-link" href="{{ path('create_ad') }}">
-                        Create Ad
-                    </a>
-                </div>
-                <div class = col-sm-5>
-                    <div class="p-3">
-                    {% if app.user %}
+                        <span class="navbar-text">
+                        {% if app.user %}
                             Welcome {{ app.user.getFirstName() }} <a href="{{ path('app_logout') }}">Logout</a>
-                    {% else %}
-                        <a href="{{ path('app_login') }}">Login</a>
-                    {% endif %}
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- END TOPBAR -->
+                        {% else %}
+                            <a href="{{ path('app_login') }}">Login</a> or <a href="{{ path('registerPage') }}">Register</a>
+                        {% endif %}
+                        </span>
+                        </div>
+                </nav>  
 
         <div class = "col-sm-12">
         <!-- ADS -->
