--- a/templates/ads.html.twig
+++ b/templates/ads.html.twig
@@ -53,21 +53,21 @@
         <div class = "col-sm-12">
                         <div class = "col-sm-7">
                     <div class="searchBar">
-                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                        <input type="text" id = "textSearch" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
                     </div>
                     <div>
-                        <button class = "btn btn-primary searchBarButton">Search</button>
+                        <button id = "searchButton" class = "btn btn-primary searchBarButton">Search</button>
                     </div>
-        </div>
+                </div>
         <!-- ADS -->
         {% set i = 0 %}
         {% for ad in ads %}
-            <div class = "card advertCard">
+            <div class = "card advertCard advertBody">
                 <div class = "card-header">
                     <div class = row>
                         <div class = "col-sm-10">
                             <div class = "d-inline-block pt-2 pl-3">
-                                 <span class = "advert" > {{ ad.getTitle() }} - {{ ad.getPlace() }} - {{ ad.getCreationDate()|date("d/m/Y") }}</span>
+                                 <span class = "advert advertTitle" > {{ ad.getTitle() }} - {{ ad.getPlace() }} - {{ ad.getCreationDate()|date("d/m/Y") }}</span>
                             </div>
                             <br>
                             <div class = "d-inline-block pt-2 pl-3 pb-2 text-justify magic">
